feat(bugs): Add no sibling and father title and name handling
